Paton fixed it. Saving it to look up later when stuck

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     border: none;
     height: 32px;
     padding: 0 12px;
+    border-radius: 2px;
 }
 
 .button:hover {
@@ -24,14 +25,20 @@ body {
     background: #093978;
 }
 
+.button:focus {
+    outline: solid 2px #0954b8;
+    outline-offset: 1px;
+    border-radius: 2px;
+}
+
 #scrim {
     background: #08101761;
-    
+
 }
 
 #messageBox {
     background: #ffffff;
-    color:black;
+    color: black;
     width: 25%;
     height: 20%;
     display: flex;
@@ -47,8 +54,8 @@ body {
 }
 
 #cancelButton {
-    height:24px;
-    width:24px;
+    height: 24px;
+    width: 24px;
     position: absolute;
     top: 4px;
     right: 4px;
@@ -97,6 +104,9 @@ body {
     background: #00004214;
 }
 
+#confirmButton {
+    margin-right: 8px;
+}
 
 #messageTitle {
     border-bottom: 1px solid #0954b8;
@@ -108,6 +118,8 @@ body {
     width: 80%;
     position: absolute;
     background-repeat: no-repeat;
-}#messageTitle:active {
+}
+
+#messageTitle:active {
     cursor: grabbing;
 }
